--- a/license.po
+++ b/license.po
@@ -3,26 +3,28 @@
 # This file is distributed under the same license as the Python package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-04-13 17:05-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2021-04-14 15:52+0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: tr\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: license.rst:7
 msgid "History and License"
-msgstr ""
+msgstr "Tarih ve Lisans"
 
 #: license.rst:11
 msgid "History of the software"
-msgstr ""
+msgstr "Yazılımın Tarihi"
 
 #: license.rst:13
 msgid ""
@@ -60,135 +62,135 @@ msgstr ""
 
 #: license.rst:35
 msgid "Release"
-msgstr ""
+msgstr "Sürüm"
 
 #: license.rst:35
 msgid "Derived from"
-msgstr ""
+msgstr "Den türetilmiş"
 
 #: license.rst:35
 msgid "Year"
-msgstr ""
+msgstr "Yıl"
 
 #: license.rst:35
 msgid "Owner"
-msgstr ""
+msgstr "Sahibi"
 
 #: license.rst:35
 msgid "GPL compatible?"
-msgstr ""
+msgstr "GPL uyumlu mu?"
 
 #: license.rst:37
 msgid "0.9.0 thru 1.2"
-msgstr ""
+msgstr "0.9.0 ila 1.2 arası"
 
 #: license.rst:37
 msgid "n/a"
-msgstr ""
+msgstr "n/a"
 
 #: license.rst:37
 msgid "1991-1995"
-msgstr ""
+msgstr "1991-1995"
 
 #: license.rst:37
 msgid "CWI"
-msgstr ""
+msgstr "CWI"
 
 #: license.rst:49 license.rst:55 license.rst:57
 msgid "yes"
-msgstr ""
+msgstr "evet"
 
 #: license.rst:39
 msgid "1.3 thru 1.5.2"
-msgstr ""
+msgstr "1.3 ile 1.5.2 arası"
 
 #: license.rst:39
 msgid "1.2"
-msgstr ""
+msgstr "1.2"
 
 #: license.rst:39
 msgid "1995-1999"
-msgstr ""
+msgstr "1995-1999"
 
 #: license.rst:45
 msgid "CNRI"
-msgstr ""
+msgstr "CNRI"
 
 #: license.rst:45
 msgid "1.6"
-msgstr ""
+msgstr "1.6"
 
 #: license.rst:41
 msgid "1.5.2"
-msgstr ""
+msgstr "1.5.2"
 
 #: license.rst:43
 msgid "2000"
-msgstr ""
+msgstr "2000"
 
 #: license.rst:45 license.rst:47
 msgid "no"
-msgstr ""
+msgstr "hayır"
 
 #: license.rst:43
 msgid "2.0"
-msgstr ""
+msgstr "2.0"
 
 #: license.rst:43
 msgid "BeOpen.com"
-msgstr ""
+msgstr "BeOpen.com"
 
 #: license.rst:45
 msgid "1.6.1"
-msgstr ""
+msgstr "1.6.1"
 
 #: license.rst:49 license.rst:51
 msgid "2001"
-msgstr ""
+msgstr "2001"
 
 #: license.rst:47
 msgid "2.1"
-msgstr ""
+msgstr "2.1"
 
 #: license.rst:49
 msgid "2.0+1.6.1"
-msgstr ""
+msgstr "2.0+1.6.1"
 
 #: license.rst:51 license.rst:57
 msgid "PSF"
-msgstr ""
+msgstr "PSF"
 
 #: license.rst:49
 msgid "2.0.1"
-msgstr ""
+msgstr "2.0.1"
 
 #: license.rst:57
 msgid "2.1.1"
-msgstr ""
+msgstr "2.1.1"
 
 #: license.rst:51
 msgid "2.1+2.0.1"
-msgstr ""
+msgstr "2.1+2.0.1"
 
 #: license.rst:55
 msgid "2.1.2"
-msgstr ""
+msgstr "2.1.2"
 
 #: license.rst:55
 msgid "2002"
-msgstr ""
+msgstr "2002"
 
 #: license.rst:55
 msgid "2.1.3"
-msgstr ""
+msgstr "2.1.3"
 
 #: license.rst:57
 msgid "2.2 and above"
-msgstr ""
+msgstr "2.2 ve üstü"
 
 #: license.rst:57
 msgid "2001-now"
-msgstr ""
+msgstr "2001-şimdi"
 
 #: license.rst:62
 msgid ""
@@ -235,15 +237,15 @@ msgstr ""
 
 #: license.rst:138
 msgid "BEOPEN.COM LICENSE AGREEMENT FOR PYTHON 2.0"
-msgstr ""
+msgstr "PYTHON 2.0 İÇİN BEOPEN.COM LİSANS ANLAŞMASI"
 
 #: license.rst:140
 msgid "BEOPEN PYTHON OPEN SOURCE LICENSE AGREEMENT VERSION 1"
-msgstr ""
+msgstr "BEOPEN PYTHON AÇIK KAYNAK LİSANS ANLAŞMASI SÜRÜM 1"
 
 #: license.rst:185
 msgid "CNRI LICENSE AGREEMENT FOR PYTHON 1.6.1"
-msgstr ""
+msgstr "PYTHON 1.6.1 İÇİN "
 
 #: license.rst:250
 msgid "CWI LICENSE AGREEMENT FOR PYTHON 0.9.0 THROUGH 1.2"
@@ -266,7 +268,7 @@ msgstr ""
 
 #: license.rst:303
 msgid "Mersenne Twister"
-msgstr ""
+msgstr "Mersenne Twister"
 
 #: license.rst:305
 msgid ""
@@ -277,7 +279,7 @@ msgstr ""
 
 #: license.rst:352
 msgid "Sockets"
-msgstr ""
+msgstr "Soketler"
 
 #: license.rst:354
 msgid ""
@@ -285,70 +287,74 @@ msgid ""
 "`getnameinfo`, which are coded in separate source files from the WIDE "
 "Project, http://www.wide.ad.jp/. ::"
 msgstr ""
+":mod:`socket` modülü WIDE Projesinden (http://www.wide.ad.jp/ ::) farklı "
+"farklı kaynak dosyalarından kodlanan :func:`getaddrinfo` ve :func:"
+"`getnameinfo` fonksiyonlarını kullanır.::"
 
 #: license.rst:387
 msgid "Asynchronous socket services"
-msgstr ""
+msgstr "Asenkron soket hizmetleri"
 
 #: license.rst:389
 msgid ""
 "The :mod:`asynchat` and :mod:`asyncore` modules contain the following "
 "notice::"
 msgstr ""
+":mod:`asynchat` ve :mod:`asyncore` modülleri aşağıdaki bildiriyi içerir::"
 
 #: license.rst:414
 msgid "Cookie management"
-msgstr ""
+msgstr "Çerez (cookie) yönetimi"
 
 #: license.rst:416
 msgid "The :mod:`http.cookies` module contains the following notice::"
-msgstr ""
+msgstr ":mod:`http.cookies` modülü aşağıdaki bildiriyi içerir::"
 
 #: license.rst:442
 msgid "Execution tracing"
-msgstr ""
+msgstr "Yürütme izleme"
 
 #: license.rst:444
 msgid "The :mod:`trace` module contains the following notice::"
-msgstr ""
+msgstr ":mod:`trace` modülü aşağıdaki bildiriyi içerir::"
 
 #: license.rst:475
 msgid "UUencode and UUdecode functions"
-msgstr ""
+msgstr "UUencode ve UUdecode fonksiyonları"
 
 #: license.rst:477
 msgid "The :mod:`uu` module contains the following notice::"
-msgstr ""
+msgstr ":mod:`uu` modülü aşağıdaki bildiriyi içerir::"
 
 #: license.rst:505
 msgid "XML Remote Procedure Calls"
-msgstr ""
+msgstr "XML Uzaktan Prosedür Çağrıları"
 
 #: license.rst:507
 msgid "The :mod:`xmlrpc.client` module contains the following notice::"
-msgstr ""
+msgstr ":mod:`xmlrpc.client` modülü aşağıdaki bildiriyi içerir::"
 
 #: license.rst:538
 msgid "test_epoll"
-msgstr ""
+msgstr "test_epoll"
 
 #: license.rst:540
 msgid "The :mod:`test_epoll` module contains the following notice::"
-msgstr ""
+msgstr ":mod:`test_epoll` modülü aşağıdaki bildiriyi içerir::"
 
 #: license.rst:564
 msgid "Select kqueue"
-msgstr ""
+msgstr "kqueue Seçimi"
 
 #: license.rst:566
 msgid ""
 "The :mod:`select` module contains the following notice for the kqueue "
 "interface::"
-msgstr ""
+msgstr ":mod:`select` modülü kqueue arayüzü için aşağıdaki bildiriyi içerir::"
 
 #: license.rst:595
 msgid "SipHash24"
-msgstr ""
+msgstr "SipHash24"
 
 #: license.rst:597
 msgid ""
@@ -358,7 +364,7 @@ msgstr ""
 
 #: license.rst:624
 msgid "strtod and dtoa"
-msgstr ""
+msgstr "strtod ve dtoa"
 
 #: license.rst:626
 msgid ""
@@ -371,7 +377,7 @@ msgstr ""
 
 #: license.rst:654
 msgid "OpenSSL"
-msgstr ""
+msgstr "OpenSSL"
 
 #: license.rst:656
 msgid ""
@@ -384,7 +390,7 @@ msgstr ""
 
 #: license.rst:791
 msgid "expat"
-msgstr ""
+msgstr "expat"
 
 #: license.rst:793
 msgid ""
@@ -394,7 +400,7 @@ msgstr ""
 
 #: license.rst:820
 msgid "libffi"
-msgstr ""
+msgstr "libffi"
 
 #: license.rst:822
 msgid ""
@@ -404,7 +410,7 @@ msgstr ""
 
 #: license.rst:849
 msgid "zlib"
-msgstr ""
+msgstr "zlib"
 
 #: license.rst:851
 msgid ""
@@ -415,7 +421,7 @@ msgstr ""
 
 #: license.rst:880
 msgid "cfuhash"
-msgstr ""
+msgstr "cfuhash"
 
 #: license.rst:882
 msgid ""
@@ -425,7 +431,7 @@ msgstr ""
 
 #: license.rst:921
 msgid "libmpdec"
-msgstr ""
+msgstr "libmpdec"
 
 #: license.rst:923
 msgid ""
