--- a/sphinx.po
+++ b/sphinx.po
@@ -3,283 +3,286 @@
 # This file is distributed under the same license as the Python package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-04-13 17:05-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2021-04-14 12:53+0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: tr\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: tools/templates/customsourcelink.html:3
 msgid "This Page"
-msgstr ""
+msgstr "Bu Sayfa"
 
 #: tools/templates/customsourcelink.html:5
 msgid "Report a Bug"
-msgstr ""
+msgstr "Bir Hata Bildir"
 
 #: tools/templates/customsourcelink.html:8
 msgid "Show Source"
-msgstr ""
+msgstr "Kaynak Kodu Göster"
 
 #: tools/templates/dummy.html:6
 msgid "CPython implementation detail:"
-msgstr ""
+msgstr "CPython uygulanma detayları:"
 
 #: tools/templates/dummy.html:7
-msgid ""
-"Deprecated since version {deprecated}, will be removed in version {removed}"
-msgstr ""
+msgid "Deprecated since version {deprecated}, will be removed in version {removed}"
+msgstr "{deprecated} sürümünden beri artık kullanılmamaktadır ve {removed} sürümünden itibaren kaldırılacaktır"
 
 #: tools/templates/dummy.html:8
 msgid "Deprecated since version {deprecated}, removed in version {removed}"
-msgstr ""
+msgstr "{deprecated} sürümünden beri artık kullanılmamaktadır ve {removed} sürümünden itibaren kaldırılmıştır"
 
 #: tools/templates/indexcontent.html:8
 msgid "Welcome! This is the documentation for Python %(release)s."
-msgstr ""
+msgstr "Hoş geldiniz! Bu dokümantasyon Python %(release) içindir."
 
 #: tools/templates/indexcontent.html:10
 msgid "Parts of the documentation:"
-msgstr ""
+msgstr "Dokümantasyonun bölümleri:"
 
 #: tools/templates/indexcontent.html:13
 msgid "What's new in Python %(version)s?"
-msgstr ""
+msgstr "Python %(version) sürümünde yenilikler neler?"
 
 #: tools/templates/indexcontent.html:14
-msgid ""
-"or <a href=\"%(whatsnew_index)s\">all \"What's new\" documents</a> since 2.0"
-msgstr ""
+msgid "or <a href=\"%(whatsnew_index)s\">all \"What's new\" documents</a> since 2.0"
+msgstr "veya <a href=\"%(whatsnew_index)s\">tüm \"Yenilikler\" belgeleri</a> since 2.0"
 
 #: tools/templates/indexcontent.html:15
 msgid "Tutorial"
-msgstr ""
+msgstr "Eğitim"
 
 #: tools/templates/indexcontent.html:16
 msgid "start here"
-msgstr ""
+msgstr "buradan başlayın"
 
 #: tools/templates/indexcontent.html:17
 msgid "Library Reference"
-msgstr ""
+msgstr "Kütüphane Referansı"
 
 #: tools/templates/indexcontent.html:18
 msgid "keep this under your pillow"
-msgstr ""
+msgstr "bunu yastığının altında tut"
 
 #: tools/templates/indexcontent.html:19
 msgid "Language Reference"
-msgstr ""
+msgstr "Dil Referansı"
 
 #: tools/templates/indexcontent.html:20
 msgid "describes syntax and language elements"
-msgstr ""
+msgstr "sözdizimi ve dil öğelerini açıklar"
 
 #: tools/templates/indexcontent.html:21
 msgid "Python Setup and Usage"
-msgstr ""
+msgstr "Python Kurulumu ve Kullanımı"
 
 #: tools/templates/indexcontent.html:22
 msgid "how to use Python on different platforms"
-msgstr ""
+msgstr "diğer platformlarda Python nasıl kullanılır"
 
 #: tools/templates/indexcontent.html:23
 msgid "Python HOWTOs"
-msgstr ""
+msgstr "Python NASIL'ları"
 
 #: tools/templates/indexcontent.html:24
 msgid "in-depth documents on specific topics"
-msgstr ""
+msgstr "belirli konular hakkında derinlemesine dokümanlar"
 
 #: tools/templates/indexcontent.html:26
 msgid "Installing Python Modules"
-msgstr ""
+msgstr "Python Modüllerini Yükleme"
 
 #: tools/templates/indexcontent.html:27
 msgid "installing from the Python Package Index &amp; other sources"
-msgstr ""
+msgstr "Python Paket İndeksinden &amp; diğer kaynaklardan indirme"
 
 #: tools/templates/indexcontent.html:28
 msgid "Distributing Python Modules"
-msgstr ""
+msgstr "Python Modüllerini Dağıtma"
 
 #: tools/templates/indexcontent.html:29
 msgid "publishing modules for installation by others"
-msgstr ""
+msgstr "başkaları tarafından indirilebilmesi için modülleri yayınlama"
 
 #: tools/templates/indexcontent.html:30
 msgid "Extending and Embedding"
-msgstr ""
+msgstr "Genişletme ve Gömme"
 
 #: tools/templates/indexcontent.html:31
 msgid "tutorial for C/C++ programmers"
-msgstr ""
+msgstr "C/C++ programlayıcıları için eğitim"
 
 #: tools/templates/indexcontent.html:32
 msgid "Python/C API"
-msgstr ""
+msgstr "Python/C API"
 
 #: tools/templates/indexcontent.html:33
 msgid "reference for C/C++ programmers"
-msgstr ""
+msgstr "C/C++ programlayıcıları için referans"
 
 #: tools/templates/indexcontent.html:34
 msgid "FAQs"
-msgstr ""
+msgstr "SSS"
 
 #: tools/templates/indexcontent.html:35
 msgid "frequently asked questions (with answers!)"
-msgstr ""
+msgstr "sıkça sorulan sorular (cevaplarıyla!)"
 
 #: tools/templates/indexcontent.html:39
 msgid "Indices and tables:"
-msgstr ""
+msgstr "İndeksler ve tablolar:"
 
 #: tools/templates/indexcontent.html:42
 msgid "Global Module Index"
-msgstr ""
+msgstr "Evrensel Modül İndeksi"
 
 #: tools/templates/indexcontent.html:43
 msgid "quick access to all modules"
-msgstr ""
+msgstr "tüm modüllere hızlı erişim"
 
 #: tools/templates/indexcontent.html:44
 msgid "General Index"
-msgstr ""
+msgstr "Genel İndeks"
 
 #: tools/templates/indexcontent.html:45
 msgid "all functions, classes, terms"
-msgstr ""
+msgstr "tüm fonksiyonlar, sınıflar, terimler"
 
 #: tools/templates/indexcontent.html:46
 msgid "Glossary"
-msgstr ""
+msgstr "Terimler Sözlüğü"
 
 #: tools/templates/indexcontent.html:47
 msgid "the most important terms explained"
-msgstr ""
+msgstr "en önemli terimler açıklandı"
 
 #: tools/templates/indexcontent.html:49
 msgid "Search page"
-msgstr ""
+msgstr "Arama sayfası"
 
 #: tools/templates/indexcontent.html:50
 msgid "search this documentation"
-msgstr ""
+msgstr "bu dokümantasyonda ara"
 
 #: tools/templates/indexcontent.html:51
 msgid "Complete Table of Contents"
-msgstr ""
+msgstr "Tüm İçerik"
 
 #: tools/templates/indexcontent.html:52
 msgid "lists all sections and subsections"
-msgstr ""
+msgstr "tüm bölümleri ve alt bölümleri listeler"
 
 #: tools/templates/indexcontent.html:56
 msgid "Meta information:"
-msgstr ""
+msgstr "Meta bilgisi:"
 
 #: tools/templates/indexcontent.html:59
 msgid "Reporting bugs"
-msgstr ""
+msgstr "Hataların bildirimi"
 
 #: tools/templates/indexcontent.html:60
 msgid "Contributing to Docs"
-msgstr ""
+msgstr "Dokümantasyonlara Katkıda Bulunmak"
 
 #: tools/templates/indexcontent.html:61
 msgid "About the documentation"
-msgstr ""
+msgstr "Dokümantasyon Hakkında"
 
 #: tools/templates/indexcontent.html:63
 msgid "History and License of Python"
-msgstr ""
+msgstr "Python'un Tarihi ve Lisansı"
 
 #: tools/templates/indexcontent.html:64
 msgid "Copyright"
-msgstr ""
+msgstr "Telif Hakkı"
 
 #: tools/templates/indexsidebar.html:1
 msgid "Download"
-msgstr ""
+msgstr "İndir"
 
 #: tools/templates/indexsidebar.html:2
 msgid "Download these documents"
-msgstr ""
+msgstr "Bu dokümanları indir"
 
 #: tools/templates/indexsidebar.html:3
 msgid "Docs by version"
-msgstr ""
+msgstr "Sürüme göre dokümantasyonlar"
 
 #: tools/templates/indexsidebar.html:5
 msgid "Python 3.10 (in development)"
-msgstr ""
+msgstr "Python 3.10 (geliştirme aşamasında)"
 
 #: tools/templates/indexsidebar.html:6
 msgid "Python 3.9 (pre-release)"
-msgstr ""
+msgstr "Python 3.9 (ön sürüm)"
 
 #: tools/templates/indexsidebar.html:7
 msgid "Python 3.8 (stable)"
-msgstr ""
+msgstr "Python 3.8 (kararlı)"
 
 #: tools/templates/indexsidebar.html:8
 msgid "Python 3.7 (stable)"
-msgstr ""
+msgstr "Python 3.7 (kararlı)"
 
 #: tools/templates/indexsidebar.html:9
 msgid "Python 3.6 (security-fixes)"
-msgstr ""
+msgstr "Python 3.6 (güvenlik düzeltmeleri)"
 
+# Değişebilir
 #: tools/templates/indexsidebar.html:10
 msgid "Python 2.7 (EOL)"
-msgstr ""
+msgstr "Python 2.7 (EOL)"
 
 #: tools/templates/indexsidebar.html:11
 msgid "All versions"
-msgstr ""
+msgstr "Tüm sürümler"
 
 #: tools/templates/indexsidebar.html:14
 msgid "Other resources"
-msgstr ""
+msgstr "Diğer kaynaklar"
 
 #: tools/templates/indexsidebar.html:17
 msgid "PEP Index"
-msgstr ""
+msgstr "PEP İndeksi"
 
 #: tools/templates/indexsidebar.html:18
 msgid "Beginner's Guide"
-msgstr ""
+msgstr "Yeni Başlayanların Kılavuzu"
 
 #: tools/templates/indexsidebar.html:19
 msgid "Book List"
-msgstr ""
+msgstr "Kitap Listesi"
 
 #: tools/templates/indexsidebar.html:20
 msgid "Audio/Visual Talks"
-msgstr ""
+msgstr "Sesli/Görsel Konuşmalar"
 
 #: tools/templates/indexsidebar.html:21
 msgid "Python Developer’s Guide"
-msgstr ""
+msgstr "Python Geliştirici Kılavuzu"
 
 #: tools/templates/layout.html:6
 msgid ""
 "This document is for an old version of Python that is no longer supported.\n"
 "    You should upgrade, and read the "
 msgstr ""
+"Bu doküman Python'un artık desteklenmeyen eski bir sürümü içindir.\n"
+"    Güncellemelisiniz ve bunu okumalısınız "
 
 #: tools/templates/layout.html:8
 msgid " Python documentation for the current stable release"
-msgstr ""
+msgstr " şuanki kararlı Python sürümü için dokümantasyon"
 
 #: tools/templates/layout.html:19
 msgid "Documentation "
-msgstr ""
+msgstr "Dokümantasyon "
