--- a/tutorial/appetite.po
+++ b/tutorial/appetite.po
@@ -3,22 +3,24 @@
 # This file is distributed under the same license as the Python package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.9\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-04-13 17:05-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2021-04-16 20:32+0300\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: tr\n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: tutorial/appetite.rst:5
 msgid "Whetting Your Appetite"
-msgstr ""
+msgstr "İştahınızı Kabartma"
 
 #: tutorial/appetite.rst:7
 msgid ""
@@ -28,6 +30,12 @@ msgid ""
 "of photo files in a complicated way. Perhaps you'd like to write a small "
 "custom database, or a specialized GUI application, or a simple game."
 msgstr ""
+"Bilgisayarlara yönelik çok çalışırsanız, sonunda otomatikleştirmek "
+"isteyeceğiniz bazı görevler olduğunu göreceksiniz. Örneğin, çok sayıda metin "
+"dosyası üzerinde bir arama ve değiştirme işlemi gerçekleştirmek veya bir "
+"grup fotoğraf dosyasını karmaşık bir şekilde yeniden adlandırmak ve yeniden "
+"düzenlemek isteyebilirsiniz. Belki de küçük özel bir veritabanı veya özel "
+"bir GUI uygulaması veya basit bir oyun yazmak isteyebilirsiniz."
 
 #: tutorial/appetite.rst:13
 msgid ""
@@ -38,10 +46,17 @@ msgid ""
 "written a program that could use an extension language, and you don't want "
 "to design and implement a whole new language for your application."
 msgstr ""
+"Eğer profesyonel bir yazılım geliştiricisiyseniz, çeşitli C/C++/Java "
+"kütüphaneleriyle çalışmanız gerekebilir. Ancak bunların gündelik yazım/"
+"derleme/test/yeniden-derleme döngüsünü çok yavaş bulabilirsiniz. Belkide "
+"böyle bir kütüphane için bir test suiti yazacaksınız ama test kodunu yazmayı "
+"sıkıcı bir görev olarak göreceksiniz. Veya belki de daha önce bir eklenti "
+"dili kullanabilen bir program yazdınız ama programınız için tamamen yeni bir "
+"dil tasarlamak ve uygulamak istemiyorsunuz."
 
 #: tutorial/appetite.rst:20
 msgid "Python is just the language for you."
-msgstr ""
+msgstr "Python tam size göre bir dildir."
 
 #: tutorial/appetite.rst:22
 msgid ""
@@ -52,6 +67,11 @@ msgid ""
 "draft program.  Python is simpler to use, available on Windows, Mac OS X, "
 "and Unix operating systems, and will help you get the job done more quickly."
 msgstr ""
+"Bu görevlerden bazıları için Unix Shell scripti veya Windows batch dosyaları "
+"yazabilirsiniz ama Shell scriptleri metin verilerini değiştirmede ve "
+"dosyalar arasında dolaşmakta en iyi olmasına rağmen GUI uygulamalar veya "
+"oyunlar için tam uygun değildir. C/C++/Java programı yazabilirsiniz ancak "
+"ilk taslak programı elde etmek bile çok fazla geliştirme süresi alabilir."
 
 #: tutorial/appetite.rst:29
 msgid ""
@@ -64,6 +84,14 @@ msgid ""
 "problem domain than Awk or even Perl, yet many things are at least as easy "
 "in Python as in those languages."
 msgstr ""
+"Python'un kullanımı kolaydır, ancak Shell scriptlerinin veya batch "
+"dosyalarının sunabileceğinden çok daha fazla yapı ve büyük programlar için "
+"destek sunan gerçek bir programlama dilidir.  Öte yandan, Python ayrıca "
+"C'den çok daha fazla hata denetimi sunar ve *çok-yüksek-seviyeli-dil* "
+"olarak, esnek diziler ve sözlükler gibi gömülü yüksek seviye veri türlerine "
+"sahiptir.  Python, daha genel veri türleri nedeniyle Awk ve hatta Perl'den "
+"çok daha büyük bir sorun alanına uygulanabilir, yine de birçok şey en "
+"azından bu dillerde olduğu kadar Python'da da kolaydır."
 
 #: tutorial/appetite.rst:37
 msgid ""
@@ -74,6 +102,13 @@ msgid ""
 "file I/O, system calls, sockets, and even interfaces to graphical user "
 "interface toolkits like Tk."
 msgstr ""
+"Python, programınızı diğer Python programlarında yeniden kullanılabilen "
+"modüllere bölmenize izin verir.  --- programlarınızın temeli olarak veya "
+"Python'da programlamayı öğrenmeye başlamak için örnek olarak "
+"kullanabileceğiniz geniş bir standart modül koleksiyonuyla birlikte gelir.  "
+"Bu modüllerden bazıları dosya I/O (Girdi/Çıktı), sistem çağrıları, soketler "
+"ve hatta Tk gibi graphical user interface (grafiksel kullanıcı arayüzü) "
+"toolkitlerine arayüzler gibi şeyler sağlar."
 
 #: tutorial/appetite.rst:44
 msgid ""
@@ -84,6 +119,12 @@ msgid ""
 "functions during bottom-up program development. It is also a handy desk "
 "calculator."
 msgstr ""
+"Python, derleme (compilation) ve bağlama (linking) gerektirmediğinden "
+"program geliştirme sırasında size önemli ölçüde zaman kazandırabilecek "
+"yorumlanmış bir dildir.  Yorumlayıcı etkileşimli olarak kullanılabilir, bu "
+"da dilin özellikleriyle deneme yapmayı, tek seferlik programlar yazmayı veya "
+"aşağıdan yukarıya program geliştirme sırasında fonksiyonları test etmeyi "
+"kolaylaştırır. Ayrıca kullanışlı bir masa hesap makinesidir."
 
 #: tutorial/appetite.rst:50
 msgid ""
@@ -91,22 +132,28 @@ msgid ""
 "written in Python are typically much shorter than equivalent C,  C++, or "
 "Java programs, for several reasons:"
 msgstr ""
+"Python, programların kısa ve okunaklı bir şekilde yazılmasını sağlar. "
+"Python'da yazılan programlar genel anlamda C, C++ veya Java'da yazılan "
+"eşdeğer programlara göre çeşitli nedenlerden dolayı çok daha kısadır:"
 
 #: tutorial/appetite.rst:54
 msgid ""
 "the high-level data types allow you to express complex operations in a "
 "single statement;"
 msgstr ""
+"yüksek seviyeli veri tipleri karışık işlemleri tek komutta ifade etmenize "
+"izin verir;"
 
 #: tutorial/appetite.rst:57
 msgid ""
 "statement grouping is done by indentation instead of beginning and ending "
 "brackets;"
 msgstr ""
+"komut gruplama süslü parantezleri açıp kapamak yerine girintiye göre yapılır;"
 
 #: tutorial/appetite.rst:60
 msgid "no variable or argument declarations are necessary."
-msgstr ""
+msgstr "değişken veya argüman tanımlamaları gerekli değildir."
 
 #: tutorial/appetite.rst:62
 msgid ""
@@ -118,6 +165,14 @@ msgid ""
 "Python interpreter into an application written in C and use it as an "
 "extension or command language for that application."
 msgstr ""
+"Python *extensible (genişletilebilir)dir*: Eğer C'de programlamayı "
+"biliyorsanız, kritik işlemleri maksimum hızda gerçekleştirmek veya Python "
+"programlarını yalnızca binary (ikili) biçimde kullanılabilen kütüphanelere "
+"(örneğin kodlayana özgü grafik kütüphaneleri) bağlamak için yorumlayıcıya "
+"yeni bir gömülü fonksiyon veya modül eklemek kolaydır. Gerçekten "
+"bağlandıktan sonra, Python yorumlayıcısını C ile yazılmış bir uygulamaya "
+"bağlayabilir ve onu bu uygulama için bir uzantı veya komut dili olarak "
+"kullanabilirsiniz."
 
 #: tutorial/appetite.rst:70
 msgid ""
@@ -125,6 +180,10 @@ msgid ""
 "Circus\" and has nothing to do with reptiles.  Making references to Monty "
 "Python skits in documentation is not only allowed, it is encouraged!"
 msgstr ""
+"Bu arada, dil adını BBC şovu \"Monty Python's Flying Circus\"dan sonra "
+"almıştır ve sürüngenlerle hiçbir alakası yoktur.  Dokümantasyonda Monty "
+"Python skeçlerine atıfta bulunmak sadece izin verilmekle kalmaz, aynı zaman "
+"teşvik edilir!"
 
 #: tutorial/appetite.rst:74
 msgid ""
@@ -132,6 +191,10 @@ msgid ""
 "more detail.  Since the best way to learn a language is to use it, the "
 "tutorial invites you to play with the Python interpreter as you read."
 msgstr ""
+"Şimdi hepiniz Python için heyecanlısınız ve onu biraz daha ayrıntılı olarak "
+"incelemek isteyeceksiniz.  Bir dili öğrenmenin en iyi yolu onu kullanmak "
+"olduğundan, eğitim sizi, bu eğitimi okurken Python yorumlayıcısıyla oynamaya "
+"davet ediyor."
 
 #: tutorial/appetite.rst:78
 msgid ""
@@ -139,6 +202,9 @@ msgid ""
 "This is rather mundane information, but essential for trying out the "
 "examples shown later."
 msgstr ""
+"Bir sonraki bölümde, yorumlayıcının kullanılma mekaniği açıklanmıştır.  Bu "
+"oldukça sıradan bir bilgidir, ancak daha sonra gösterilen örnekleri denemek "
+"için gereklidir."
 
 #: tutorial/appetite.rst:82
 msgid ""
@@ -147,3 +213,8 @@ msgid ""
 "and data types, through functions and modules, and finally touching upon "
 "advanced concepts like exceptions and user-defined classes."
 msgstr ""
+"Eğitimin geri kalanı, basit ifadeler, durumlar (statements) ve veri "
+"türlerinden başlayarak, fonksiyonlar ve modüller aracılığıyla ve son olarak "
+"istisnalar (exceptions) ve kullanıcı tanımlı sınıflar (classes) gibi "
+"gelişmiş kavramlara değinerek örnekler aracılığıyla Python dilinin ve "
+"sisteminin çeşitli özelliklerini tanıtır."
